fix: List label text not start aligned in safari (#25018)

--- a/components/descriptions/style/index.less
+++ b/components/descriptions/style/index.less
@@ -37,6 +37,7 @@
     font-weight: normal;
     font-size: @font-size-base;
     line-height: @line-height-base;
+    text-align: start;
 
     &::after {
       & when (@descriptions-item-trailing-colon=true) {
